--- a/investix/en/about/contact-us.html
+++ b/investix/en/about/contact-us.html
@@ -59,7 +59,7 @@
             </li>
             <li>
               <select class="nav__select">
-                <option value="en">EN</option>
+                <option value="en" selected>EN</option>
                 <option value="ru">RU</option>
               </select>
             </li>
