--- a/investix/index.html
+++ b/investix/index.html
@@ -60,7 +60,7 @@
             </li>
             <li>
               <select class="nav__select">
-                <option value="en">EN</option>
+                <option value="en" selected>EN</option>
                 <option value="ru">RU</option>
               </select>
             </li>
