--- a/investix/ru/account-programs/basic.html
+++ b/investix/ru/account-programs/basic.html
@@ -60,7 +60,7 @@
             <li>
               <select class="nav__select">
                 <option value="en">EN</option>
-                <option value="ru">RU</option>
+                <option value="ru" selected>RU</option>
               </select>
             </li>
           </ul>
