--- a/investix/ru/index.html
+++ b/investix/ru/index.html
@@ -61,7 +61,7 @@
             <li>
               <select class="nav__select">
                 <option value="en">EN</option>
-                <option value="ru">RU</option>
+                <option value="ru" selected>RU</option>
               </select>
             </li>
           </ul>
