--- a/investix/ru/trading-room.html
+++ b/investix/ru/trading-room.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
@@ -60,7 +60,7 @@
             <li>
               <select class="nav__select">
                 <option value="en">EN</option>
-                <option value="ru">RU</option>
+                <option value="ru" selected>RU</option>
               </select>
             </li>
           </ul>
