--- a/investix/ru/education/legal-information.html
+++ b/investix/ru/education/legal-information.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-  <title>О нас - Investix</title>
-  <link rel="stylesheet" href="../css/style.min.css">
+  <title>Юридическая информация - Investix</title>
+  <link rel="stylesheet" href="../../css/style.min.css">
   <!-- Favicon -->
   <link rel="icon" type="image/svg+xml" href="../img/favicon/favicon.svg">
   <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
@@ -43,8 +43,15 @@
             <li>
               <a href="#">Education</a>
               <ul class="nav__sublist">
-                <li><a href="education/star-trader-course.html">Star Trader Course</a></li>
-                <li><a href="education/financial-news.html">Financial News</a></li>
+                <li><a href="star-trader-course.html">Star Trader Course</a></li>
+                <li><a href="financial-news.html">Financial News</a></li>
+                <li><a href="about-us.html">О нас</a></li>
+                <li><a href="account-types.html">Типы счетов</a></li>
+                <li><a href="asset-management.html">Управление активами</a></li>
+                <li><a href="exchange-consulting.html">Биржевой консалтинг</a></li>
+                <li><a href="legal-information.html">Юридическая информация</a></li>
+                <li><a href="our-service.html">Наши Cервисы</a></li>
+                <li><a href="portfolio-investment.html">Портфельное инвестирование</a></li>
               </ul>
             </li>
             <li><a class="nav__chat" href="trading-room.html">Chat Room</a></li>
@@ -70,59 +77,47 @@
     </div>
   </header>
   <main class="inner">
-    <section class="inner__title  inner__title--img3">
+    <section class="inner__title  inner__title--img4">
       <div class="container">
-        <h1 class="inner__name">О нас</h1>
+        <h1 class="inner__name">Юридическая информация</h1>
       </div>
     </section>
     <section class="text">
       <div class="container">
-        <p class="text__medium">Аналитическая компания "investix" специализируется на исследовании актуальных тенденций финансовых инструментов, и оказывает услуги в сфере защиты и управления финансовыми активами.</p>
-        <h2 class="text__title">Почему стоит обратиться к нам?</h2>
-        <p class="text__small">Как минимум, потому что мы не заинтересованы в том, чтобы вы теряли деньги на финансовых рынках. Нам не важно с каким из брокеров Вы предпочитаете работать - мы никого не рекламируем, а лишь рекомендуем проверенных (тех с кем работаем сами). </p>
+        <p class="text__medium">Investix LTD, зарегистрированна и существует согласно законодательству Cоединенного Королевства Великобритании Reference number: 591556 Финансовая деятельность компании регулируется Financial Conduct Authority «Управление по финансовому регулированию и надзору Великобритании» Финансовая деятельность компании регулируется Financial Conduct Authority «Управление по финансовому регулированию и надзору Великобритании»</p>
+        <h2 class="text__title">Договора и соглашения:</h2>
         <ul class="text__list  text__list--about">
-          <li>Повышение качественного и количественного уровня знаний</li>
-          <li>Индивидуальный подход в обучении</li>
-          <li>Глубокий анализ рынка</li>
-          <li>Разработка торговых стратегий и моделей инвестирования</li>
-          <li>Эфективное управление активами</li>
+          <li>Клиентское Соглашение</li>
+          <li>Политика Конфиденциальности</li>
+          <li>Согласие на обработку персональных данных</li>
+          <li>Соглашение о сотрудничестве</li>
+          <li>Регламент сервиса настроек обработки и исполнения клиентских распоряжений</li>
+          <li>Регламент торговых операций</li>
+          <li>Договор купли-продажи структурированного продукта</li>
+          <li>Договор о предоставлении дистанционных образовательных технологий</li>
+          <li>Договор о предоставлении информационно-консультационных услуг</li>
+          <li>Договор управления активами</li>
+          <li>Договор о сервисе сигналы</li>
+          <li>Договор об обучении</li>
+          <li>Договор целевого займа</li>
+          <li>Соглашение об оказании услуг прямого доступа к международным фондовым рынкам</li>
+          <li>Договор страхования</li>
+          <li>Договор кредитования</li>
         </ul>
-        <h2 class="text__title  text__title--medium">Наша команда</h2>
-        <p class="text__small">Мы делаем деньги на финансовых рынках, повышаем свой уровень и непрерывно совершенствуемся и растем. Нам повезло : мы молоды, уже достаточно опытны, амбициозны и любим свое дело, поэтому стремимся делать его еще совершеннее и эффективней. Мы собираем эти знания и опыт уже больше 8 лет, естественно путем множества проб и ошибок, взлетов и, конечно, падений. Сегодня, чтобы расти и развиваться еще быстрее мы готовы этим опытом делиться, и расширять свой бизнес путем обучения, доверительного управления и увеличения команды грамотных, и желающих расти и развиваться дальше трейдеров.</p>
-        <div class="text__flex">
-          <div class="text__human">
-            <img src="../img/human1.jpg" alt="Дмитрий Смирнов">
-            <b>Дмитрий Смирнов</b>
-            <p>Старший менеджер</p>
+        <h2 class="text__title  text__title--medium">Адреса:</h2>
+        <div class="text__flex  text__flex--start">
+          <div class="text__address">
+            <p>МФК ЦМТ</p>
+            <p>"Центр Международной торговли"<br>Москва, 123610<br>Краснопресненская набережная, 12</p>
           </div>
-          <div class="text__human">
-            <img src="../img/human2.jpg" alt="Карина Ларина">
-            <b>Карина Ларина</b>
-            <p>Старший менеджер</p>
-          </div>
-          <div class="text__human">
-            <img src="../img/human3.jpg" alt="Андрей Степанов">
-            <b>Андрей Степанов</b>
-            <p>Ведущий аналитик</p>
-          </div>
-          <div class="text__human">
-            <img src="../img/human4.jpg" alt="Арина Яковлева">
-            <b>Арина Яковлева</b>
-            <p>Трейдер</p>
-          </div>
-          <div class="text__human">
-            <img src="../img/human5.jpg" alt="Михаил Городецкий">
-            <b>Михаил Городецкий</b>
-            <p>Финансовый аналитик</p>
-          </div>
-          <div class="text__human">
-            <img src="../img/human6.jpg" alt="Виктор Астахов">
-            <b>Виктор Астахов</b>
-            <p>Главный трейдер</p>
+          <div class="text__address">
+            <p>LONDON OFFICE</p>
+            <p>26 Throgmorton Street,<br>London,<br>EC2N 2AN</p>
           </div>
         </div>
       </div>
     </section>
+    <img class="text__map" src="../img/map.jpg" alt="">
   </main>
   <section class="payment">
     <div class="container">
