--- a/investix/ru/education/online-calculator-trader.html
+++ b/investix/ru/education/online-calculator-trader.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-  <title>Юридическая информация - Investix</title>
-  <link rel="stylesheet" href="../css/style.min.css">
+  <title>Онлайн калькулятор трейдера - Investix</title>
+  <link rel="stylesheet" href="../../css/style.min.css">
   <!-- Favicon -->
   <link rel="icon" type="image/svg+xml" href="../img/favicon/favicon.svg">
   <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
@@ -43,8 +43,15 @@
             <li>
               <a href="#">Education</a>
               <ul class="nav__sublist">
-                <li><a href="education/star-trader-course.html">Star Trader Course</a></li>
-                <li><a href="education/financial-news.html">Financial News</a></li>
+                <li><a href="star-trader-course.html">Star Trader Course</a></li>
+                <li><a href="financial-news.html">Financial News</a></li>
+                <li><a href="about-us.html">О нас</a></li>
+                <li><a href="account-types.html">Типы счетов</a></li>
+                <li><a href="asset-management.html">Управление активами</a></li>
+                <li><a href="exchange-consulting.html">Биржевой консалтинг</a></li>
+                <li><a href="legal-information.html">Юридическая информация</a></li>
+                <li><a href="our-service.html">Наши Cервисы</a></li>
+                <li><a href="portfolio-investment.html">Портфельное инвестирование</a></li>
               </ul>
             </li>
             <li><a class="nav__chat" href="trading-room.html">Chat Room</a></li>
@@ -70,47 +77,17 @@
     </div>
   </header>
   <main class="inner">
-    <section class="inner__title  inner__title--img4">
+    <section class="inner__title">
       <div class="container">
-        <h1 class="inner__name">Юридическая информация</h1>
+        <h1 class="inner__name">Онлайн калькулятор трейдера</h1>
       </div>
     </section>
     <section class="text">
       <div class="container">
-        <p class="text__medium">Investix LTD, зарегистрированна и существует согласно законодательству Cоединенного Королевства Великобритании Reference number: 591556 Финансовая деятельность компании регулируется Financial Conduct Authority «Управление по финансовому регулированию и надзору Великобритании» Финансовая деятельность компании регулируется Financial Conduct Authority «Управление по финансовому регулированию и надзору Великобритании»</p>
-        <h2 class="text__title">Договора и соглашения:</h2>
-        <ul class="text__list  text__list--about">
-          <li>Клиентское Соглашение</li>
-          <li>Политика Конфиденциальности</li>
-          <li>Согласие на обработку персональных данных</li>
-          <li>Соглашение о сотрудничестве</li>
-          <li>Регламент сервиса настроек обработки и исполнения клиентских распоряжений</li>
-          <li>Регламент торговых операций</li>
-          <li>Договор купли-продажи структурированного продукта</li>
-          <li>Договор о предоставлении дистанционных образовательных технологий</li>
-          <li>Договор о предоставлении информационно-консультационных услуг</li>
-          <li>Договор управления активами</li>
-          <li>Договор о сервисе сигналы</li>
-          <li>Договор об обучении</li>
-          <li>Договор целевого займа</li>
-          <li>Соглашение об оказании услуг прямого доступа к международным фондовым рынкам</li>
-          <li>Договор страхования</li>
-          <li>Договор кредитования</li>
-        </ul>
-        <h2 class="text__title  text__title--medium">Адреса:</h2>
-        <div class="text__flex  text__flex--start">
-          <div class="text__address">
-            <p>МФК ЦМТ</p>
-            <p>"Центр Международной торговли"<br>Москва, 123610<br>Краснопресненская набережная, 12</p>
-          </div>
-          <div class="text__address">
-            <p>LONDON OFFICE</p>
-            <p>26 Throgmorton Street,<br>London,<br>EC2N 2AN</p>
-          </div>
-        </div>
+        <p class="text__small">С калькулятором трейдера от LiteForex вы сможете путем несложных манипуляций рассчитать возможную прибыль или убыток по текущей или запланированной позиции. Просто вставьте в соответствующие поля тип вашего счета, его валюту, используемый торговый инструмент, объем лота и размер кредитного плеча — и калькулятор для Форекса сам выполнит все необходимые вычисления.</p>
+        <iframe src="https://ru.liteforex.com/trading/forex-calculator/" frameborder="0" width="100%" height="1000px"></iframe>
       </div>
     </section>
-    <img class="text__map" src="../img/map.jpg" alt="">
   </main>
   <section class="payment">
     <div class="container">
