--- a/investix/ru/education/our-service.html
+++ b/investix/ru/education/our-service.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-  <title>Онлайн калькулятор трейдера - Investix</title>
-  <link rel="stylesheet" href="../css/style.min.css">
+  <title>Наши Cервисы - Investix</title>
+  <link rel="stylesheet" href="../../css/style.min.css">
   <!-- Favicon -->
   <link rel="icon" type="image/svg+xml" href="../img/favicon/favicon.svg">
   <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
@@ -43,8 +43,15 @@
             <li>
               <a href="#">Education</a>
               <ul class="nav__sublist">
-                <li><a href="education/star-trader-course.html">Star Trader Course</a></li>
-                <li><a href="education/financial-news.html">Financial News</a></li>
+                <li><a href="star-trader-course.html">Star Trader Course</a></li>
+                <li><a href="financial-news.html">Financial News</a></li>
+                <li><a href="about-us.html">О нас</a></li>
+                <li><a href="account-types.html">Типы счетов</a></li>
+                <li><a href="asset-management.html">Управление активами</a></li>
+                <li><a href="exchange-consulting.html">Биржевой консалтинг</a></li>
+                <li><a href="legal-information.html">Юридическая информация</a></li>
+                <li><a href="our-service.html">Наши Cервисы</a></li>
+                <li><a href="portfolio-investment.html">Портфельное инвестирование</a></li>
               </ul>
             </li>
             <li><a class="nav__chat" href="trading-room.html">Chat Room</a></li>
@@ -72,13 +79,47 @@
   <main class="inner">
     <section class="inner__title">
       <div class="container">
-        <h1 class="inner__name">Онлайн калькулятор трейдера</h1>
+        <h1 class="inner__name">Наши Сервисы</h1>
       </div>
     </section>
     <section class="text">
       <div class="container">
-        <p class="text__small">С калькулятором трейдера от LiteForex вы сможете путем несложных манипуляций рассчитать возможную прибыль или убыток по текущей или запланированной позиции. Просто вставьте в соответствующие поля тип вашего счета, его валюту, используемый торговый инструмент, объем лота и размер кредитного плеча — и калькулятор для Форекса сам выполнит все необходимые вычисления.</p>
-        <iframe src="https://ru.liteforex.com/trading/forex-calculator/" frameborder="0" width="100%" height="1000px"></iframe>
+        <p class="text__small">Компания "Finance Expert" была создана профессионалами финансовых рынков для помощи трейдерам во всех аспектах торговли финансовых рынках. Мы любим наше дело и готовы с радостью помочь всем желающим. Наши услуги подходят всем без исключения – как новичкам, так и опытным спекулянтам со всего света. С нашей помощью вы сможете избежать типичных ошибок трейдеров, не стать жертвами мошенников, улучшить свои торговые результаты, стать настоящим профессиональным трейдером! Наши продукты не имеют аналогов на рынке, они созданы спекулянтами с многолетним успешным опытом торговли и прошли проверку временем. Мы поможем Вам сделать трейдинг вашим успешным бизнесом. С нами вы на правильном пути к успеху!</p>
+        <h2 class="text__title">Почему стоит обратиться к нам?</h2>
+        <p class="text__small">Как минимум, потому что мы не заинтересованы в том, чтобы вы теряли деньги на финансовых рынках. Нам не важно с каким из брокеров Вы предпочитаете работать - мы никого не рекламируем, а лишь рекомендуем проверенных (тех с кем работаем сами).</p>
+        <ul class="text__list">
+          <li>Повышение качественного и количественного уровня знаний</li>
+          <li>Индивидуальный подход к каждому клиенту с учетом Ваших пожеланий и требований</li>
+          <li>Глубокий анализ рынка</li>
+          <li>Разработка торговых стратегий и моделей инвестирования</li>
+          <li>Эфективное управление активами</li>
+        </ul>
+      </div>
+    </section>
+    <div class="badge">
+      <div class="badge__box  badge__box--1">
+        <p>Прибыльные<br>торговые сигналы</p>
+      </div>
+      <div class="badge__box  badge__box--2">
+        <p>разработка<br>инвестиционных<br>стратегий</p>
+      </div>
+      <div class="badge__box  badge__box--3">
+        <p>персональный<br>управляющий</p>
+      </div>
+      <div class="badge__box  badge__box--4">
+        <p>персональный<br>управляющий</p>
+      </div>
+      <div class="badge__box  badge__box--5">
+        <p>персональный<br>управляющий</p>
+      </div>
+      <div class="badge__box  badge__box--6">
+        <p>персональный<br>управляющий</p>
+      </div>
+    </div>
+    <section class="text">
+      <div class="container">
+        <p class="text__small">Аналитическая компания "Finance Expert" специализируется на исследовании актуальных тенденций финансовых инструментов, и оказывает услуги в сфере защиты и управления финансовыми активами.</p>
+        <p class="text__small">Финансовые рынки всегда были привлекательной сферой для всех, кто хочет обрести финансовую независимость и жить в своё удовольствие. К сожалению, лишь немногим удается добиться успеха. Причин много: это и ожидание лёгкой наживы, и отсутствие практических знаний, нечестные брокеры и мошенники, которых очень много. Эта несправедливость побудила нас создать проект, который сможет защитить от всевозможных проблем и разочарований тех, кто пришел на рынок зарабатывать. Finance Expert это не просто компания, это идея, за которой стоят настоящие профессионалы своего дела. Мы готовы помочь каждому, кто решил сделать трейдинг частью своей жизни. Наша главная задача – Ваш успех!</p>
       </div>
     </section>
   </main>
