--- a/investix/ru/education/portfolio-investment.html
+++ b/investix/ru/education/portfolio-investment.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <title>Портфельное инвестирование - Investix</title>
-  <link rel="stylesheet" href="../css/style.min.css">
+  <link rel="stylesheet" href="../../css/style.min.css">
   <!-- Favicon -->
   <link rel="icon" type="image/svg+xml" href="../img/favicon/favicon.svg">
   <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
@@ -43,8 +43,15 @@
             <li>
               <a href="#">Education</a>
               <ul class="nav__sublist">
-                <li><a href="education/star-trader-course.html">Star Trader Course</a></li>
-                <li><a href="education/financial-news.html">Financial News</a></li>
+                <li><a href="star-trader-course.html">Star Trader Course</a></li>
+                <li><a href="financial-news.html">Financial News</a></li>
+                <li><a href="about-us.html">О нас</a></li>
+                <li><a href="account-types.html">Типы счетов</a></li>
+                <li><a href="asset-management.html">Управление активами</a></li>
+                <li><a href="exchange-consulting.html">Биржевой консалтинг</a></li>
+                <li><a href="legal-information.html">Юридическая информация</a></li>
+                <li><a href="our-service.html">Наши Cервисы</a></li>
+                <li><a href="portfolio-investment.html">Портфельное инвестирование</a></li>
               </ul>
             </li>
             <li><a class="nav__chat" href="trading-room.html">Chat Room</a></li>
