--- a/investix/ru/index.html
+++ b/investix/ru/index.html
@@ -46,6 +46,13 @@
               <ul class="nav__sublist">
                 <li><a href="education/star-trader-course.html">Star Trader Course</a></li>
                 <li><a href="education/financial-news.html">Financial News</a></li>
+                <li><a href="education/about-us.html">О нас</a></li>
+                <li><a href="education/account-types.html">Типы счетов</a></li>
+                <li><a href="education/asset-management.html">Управление активами</a></li>
+                <li><a href="education/exchange-consulting.html">Биржевой консалтинг</a></li>
+                <li><a href="education/legal-information.html">Юридическая информация</a></li>
+                <li><a href="education/our-service.html">Наши Cервисы</a></li>
+                <li><a href="education/portfolio-investment.html">Портфельное инвестирование</a></li>
               </ul>
             </li>
             <li><a class="nav__chat" href="trading-room.html">Chat Room</a></li>
@@ -476,6 +483,13 @@
           <li><b>Education</b></li>
           <li><a href="education/star-trader-course.html">Star Trader Course</a></li>
           <li><a href="education/financial-news.html">Financial News</a></li>
+          <li><a href="education/about-us.html">О нас</a></li>
+          <li><a href="education/account-types.html">Типы счетов</a></li>
+          <li><a href="education/asset-management.html">Управление активами</a></li>
+          <li><a href="education/exchange-consulting.html">Биржевой консалтинг</a></li>
+          <li><a href="education/legal-information.html">Юридическая информация</a></li>
+          <li><a href="education/our-service.html">Наши Cервисы</a></li>
+          <li><a href="education/portfolio-investment.html">Портфельное инвестирование</a></li>
         </ul>
         <ul class="footer__list">
           <li><b>Funded Accounts</b></li>
