--- a/investix/ru/education/about-us.html
+++ b/investix/ru/education/about-us.html
@@ -3,19 +3,19 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-  <title>Наши Cервисы - Investix</title>
-  <link rel="stylesheet" href="../css/style.min.css">
+  <title>О нас - Investix</title>
+  <link rel="stylesheet" href="../../css/style.min.css">
   <!-- Favicon -->
-  <link rel="icon" type="image/svg+xml" href="../img/favicon/favicon.svg">
-  <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="194x194" href="../img/favicon/favicon-194x194.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="../img/favicon/android-chrome-192x192.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon/favicon-16x16.png">
-  <link rel="mask-icon" href="../img/favicon/safari-pinned-tab.svg" color="#cd2122">
-  <link rel="manifest" href="../site.webmanifest">
-  <meta name="msapplication-config" content="../browserconfig.xml">
-  <meta name="msapplication-TileImage" content="../img/favicon/mstile-144x144.png">
+  <link rel="icon" type="image/svg+xml" href="../../img/favicon/favicon.svg">
+  <link rel="apple-touch-icon" sizes="180x180" href="../../apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="../../img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="194x194" href="../../img/favicon/favicon-194x194.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="../../img/favicon/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../../img/favicon/favicon-16x16.png">
+  <link rel="mask-icon" href="../../img/favicon/safari-pinned-tab.svg" color="#cd2122">
+  <link rel="manifest" href="../../site.webmanifest">
+  <meta name="msapplication-config" content="../../browserconfig.xml">
+  <meta name="msapplication-TileImage" content="../../img/favicon/mstile-144x144.png">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="theme-color" content="#ffffff">
 </head>
@@ -24,7 +24,7 @@
     <div class="container">
       <div class="header__flex">
         <a class="header__link" href="../index.html">
-          <img class="header__logo" src="../img/logo.svg" alt="Investix">
+          <img class="header__logo" src="../../img/logo.svg" alt="Investix">
         </a>
         <button class="header__toggle  header__toggle--inactive" type="button"></button>
         <nav class="nav">
@@ -43,8 +43,15 @@
             <li>
               <a href="#">Education</a>
               <ul class="nav__sublist">
-                <li><a href="education/star-trader-course.html">Star Trader Course</a></li>
-                <li><a href="education/financial-news.html">Financial News</a></li>
+                <li><a href="star-trader-course.html">Star Trader Course</a></li>
+                <li><a href="financial-news.html">Financial News</a></li>
+                <li><a href="about-us.html">О нас</a></li>
+                <li><a href="account-types.html">Типы счетов</a></li>
+                <li><a href="asset-management.html">Управление активами</a></li>
+                <li><a href="exchange-consulting.html">Биржевой консалтинг</a></li>
+                <li><a href="legal-information.html">Юридическая информация</a></li>
+                <li><a href="our-service.html">Наши Cервисы</a></li>
+                <li><a href="portfolio-investment.html">Портфельное инвестирование</a></li>
               </ul>
             </li>
             <li><a class="nav__chat" href="trading-room.html">Chat Room</a></li>
@@ -70,49 +77,57 @@
     </div>
   </header>
   <main class="inner">
-    <section class="inner__title">
+    <section class="inner__title  inner__title--img3">
       <div class="container">
-        <h1 class="inner__name">Наши Сервисы</h1>
+        <h1 class="inner__name">О нас</h1>
       </div>
     </section>
     <section class="text">
       <div class="container">
-        <p class="text__small">Компания "Finance Expert" была создана профессионалами финансовых рынков для помощи трейдерам во всех аспектах торговли финансовых рынках. Мы любим наше дело и готовы с радостью помочь всем желающим. Наши услуги подходят всем без исключения – как новичкам, так и опытным спекулянтам со всего света. С нашей помощью вы сможете избежать типичных ошибок трейдеров, не стать жертвами мошенников, улучшить свои торговые результаты, стать настоящим профессиональным трейдером! Наши продукты не имеют аналогов на рынке, они созданы спекулянтами с многолетним успешным опытом торговли и прошли проверку временем. Мы поможем Вам сделать трейдинг вашим успешным бизнесом. С нами вы на правильном пути к успеху!</p>
+        <p class="text__medium">Аналитическая компания "investix" специализируется на исследовании актуальных тенденций финансовых инструментов, и оказывает услуги в сфере защиты и управления финансовыми активами.</p>
         <h2 class="text__title">Почему стоит обратиться к нам?</h2>
-        <p class="text__small">Как минимум, потому что мы не заинтересованы в том, чтобы вы теряли деньги на финансовых рынках. Нам не важно с каким из брокеров Вы предпочитаете работать - мы никого не рекламируем, а лишь рекомендуем проверенных (тех с кем работаем сами).</p>
-        <ul class="text__list">
+        <p class="text__small">Как минимум, потому что мы не заинтересованы в том, чтобы вы теряли деньги на финансовых рынках. Нам не важно с каким из брокеров Вы предпочитаете работать - мы никого не рекламируем, а лишь рекомендуем проверенных (тех с кем работаем сами). </p>
+        <ul class="text__list  text__list--about">
           <li>Повышение качественного и количественного уровня знаний</li>
-          <li>Индивидуальный подход к каждому клиенту с учетом Ваших пожеланий и требований</li>
+          <li>Индивидуальный подход в обучении</li>
           <li>Глубокий анализ рынка</li>
           <li>Разработка торговых стратегий и моделей инвестирования</li>
           <li>Эфективное управление активами</li>
         </ul>
-      </div>
-    </section>
-    <div class="badge">
-      <div class="badge__box  badge__box--1">
-        <p>Прибыльные<br>торговые сигналы</p>
-      </div>
-      <div class="badge__box  badge__box--2">
-        <p>разработка<br>инвестиционных<br>стратегий</p>
-      </div>
-      <div class="badge__box  badge__box--3">
-        <p>персональный<br>управляющий</p>
-      </div>
-      <div class="badge__box  badge__box--4">
-        <p>персональный<br>управляющий</p>
-      </div>
-      <div class="badge__box  badge__box--5">
-        <p>персональный<br>управляющий</p>
-      </div>
-      <div class="badge__box  badge__box--6">
-        <p>персональный<br>управляющий</p>
-      </div>
-    </div>
-    <section class="text">
-      <div class="container">
-        <p class="text__small">Аналитическая компания "Finance Expert" специализируется на исследовании актуальных тенденций финансовых инструментов, и оказывает услуги в сфере защиты и управления финансовыми активами.</p>
-        <p class="text__small">Финансовые рынки всегда были привлекательной сферой для всех, кто хочет обрести финансовую независимость и жить в своё удовольствие. К сожалению, лишь немногим удается добиться успеха. Причин много: это и ожидание лёгкой наживы, и отсутствие практических знаний, нечестные брокеры и мошенники, которых очень много. Эта несправедливость побудила нас создать проект, который сможет защитить от всевозможных проблем и разочарований тех, кто пришел на рынок зарабатывать. Finance Expert это не просто компания, это идея, за которой стоят настоящие профессионалы своего дела. Мы готовы помочь каждому, кто решил сделать трейдинг частью своей жизни. Наша главная задача – Ваш успех!</p>
+        <h2 class="text__title  text__title--medium">Наша команда</h2>
+        <p class="text__small">Мы делаем деньги на финансовых рынках, повышаем свой уровень и непрерывно совершенствуемся и растем. Нам повезло : мы молоды, уже достаточно опытны, амбициозны и любим свое дело, поэтому стремимся делать его еще совершеннее и эффективней. Мы собираем эти знания и опыт уже больше 8 лет, естественно путем множества проб и ошибок, взлетов и, конечно, падений. Сегодня, чтобы расти и развиваться еще быстрее мы готовы этим опытом делиться, и расширять свой бизнес путем обучения, доверительного управления и увеличения команды грамотных, и желающих расти и развиваться дальше трейдеров.</p>
+        <div class="text__flex">
+          <div class="text__human">
+            <img src="../img/human1.jpg" alt="Дмитрий Смирнов">
+            <b>Дмитрий Смирнов</b>
+            <p>Старший менеджер</p>
+          </div>
+          <div class="text__human">
+            <img src="../img/human2.jpg" alt="Карина Ларина">
+            <b>Карина Ларина</b>
+            <p>Старший менеджер</p>
+          </div>
+          <div class="text__human">
+            <img src="../img/human3.jpg" alt="Андрей Степанов">
+            <b>Андрей Степанов</b>
+            <p>Ведущий аналитик</p>
+          </div>
+          <div class="text__human">
+            <img src="../img/human4.jpg" alt="Арина Яковлева">
+            <b>Арина Яковлева</b>
+            <p>Трейдер</p>
+          </div>
+          <div class="text__human">
+            <img src="../img/human5.jpg" alt="Михаил Городецкий">
+            <b>Михаил Городецкий</b>
+            <p>Финансовый аналитик</p>
+          </div>
+          <div class="text__human">
+            <img src="../img/human6.jpg" alt="Виктор Астахов">
+            <b>Виктор Астахов</b>
+            <p>Главный трейдер</p>
+          </div>
+        </div>
       </div>
     </section>
   </main>
@@ -138,8 +153,17 @@
       <div class="footer__flex">
         <ul class="footer__list">
           <li><b>Education</b></li>
-          <li><a href="../education/star-trader-course.html">Star Trader Course</a></li>
-          <li><a href="../education/financial-news.html">Financial News</a></li>
+          <li><a href="star-trader-course.html">Star Trader Course</a></li>
+          <li><a href="financial-news.html">Financial News</a></li>
+          <li><a href="star-trader-course.html">Star Trader Course</a></li>
+          <li><a href="financial-news.html">Financial News</a></li>
+          <li><a href="about-us.html">О нас</a></li>
+          <li><a href="account-types.html">Типы счетов</a></li>
+          <li><a href="asset-management.html">Управление активами</a></li>
+          <li><a href="exchange-consulting.html">Биржевой консалтинг</a></li>
+          <li><a href="legal-information.html">Юридическая информация</a></li>
+          <li><a href="our-service.html">Наши Cервисы</a></li>
+          <li><a href="portfolio-investment.html">Портфельное инвестирование</a></li>
         </ul>
         <ul class="footer__list">
           <li><b>Funded Accounts</b></li>
