--- a/investix/ru/education/star-trader-course.html
+++ b/investix/ru/education/star-trader-course.html
@@ -43,8 +43,15 @@
             <li>
               <a href="#">Education</a>
               <ul class="nav__sublist">
-                <li><a class="nav__active">Star Trader Course</a></li>
+                <li><a href="star-trader-course.html">Star Trader Course</a></li>
                 <li><a href="financial-news.html">Financial News</a></li>
+                <li><a href="about-us.html">О нас</a></li>
+                <li><a href="account-types.html">Типы счетов</a></li>
+                <li><a href="asset-management.html">Управление активами</a></li>
+                <li><a href="exchange-consulting.html">Биржевой консалтинг</a></li>
+                <li><a href="legal-information.html">Юридическая информация</a></li>
+                <li><a href="our-service.html">Наши Cервисы</a></li>
+                <li><a href="portfolio-investment.html">Портфельное инвестирование</a></li>
               </ul>
             </li>
             <li><a class="nav__chat" href="../trading-room.html">Chat Room</a></li>
