--- a/investix/ru/trading-room.html
+++ b/investix/ru/trading-room.html
@@ -45,6 +45,13 @@
               <ul class="nav__sublist">
                 <li><a href="education/star-trader-course.html">Star Trader Course</a></li>
                 <li><a href="education/financial-news.html">Financial News</a></li>
+                <li><a href="education/about-us.html">О нас</a></li>
+                <li><a href="education/account-types.html">Типы счетов</a></li>
+                <li><a href="education/asset-management.html">Управление активами</a></li>
+                <li><a href="education/exchange-consulting.html">Биржевой консалтинг</a></li>
+                <li><a href="education/legal-information.html">Юридическая информация</a></li>
+                <li><a href="education/our-service.html">Наши Cервисы</a></li>
+                <li><a href="education/portfolio-investment.html">Портфельное инвестирование</a></li>
               </ul>
             </li>
             <li><a class="nav__chat  nav__active">Chat Room</a></li>
