--- a/investix/ru/account-programs/advanced.html
+++ b/investix/ru/account-programs/advanced.html
@@ -30,21 +30,28 @@
         <nav class="nav">
           <ul class="nav__list">
             <li>
-              <a class="nav__active" href="account.html">Account Programs</a>
+              <a class="nav__active">Обучающие программы</a>
               <ul class="nav__sublist">
-                <li><a href="basic.html">Basic Program</a></li>
-                <li><a class="nav__active">Advanced Program</a></li>
-                <li><a href="expert.html">Expert Program</a></li>
-                <li><a href="pro.html">Pro Program</a></li>
-                <li><a href="ultimate.html">Ultimate Program</a></li>
-                <li><a href="crypto-master.html">Crypto Master</a></li>
+                <li><a href="basic.html">Базовая</a></li>
+                <li><a class="nav__active">Продвинутая</a></li>
+                <li><a href="expert.html">Эксперт</a></li>
+                <li><a href="pro.html">Профессионал</a></li>
+                <li><a href="ultimate.html">Совершенная</a></li>
+                <li><a href="crypto-master.html">Крипто Мастер</a></li>
               </ul>
             </li>
             <li>
-              <a href="#">Education</a>
+              <a href="#">Обучение</a>
               <ul class="nav__sublist">
-                <li><a href="../education/star-trader-course.html">Star Trader Course</a></li>
-                <li><a href="../education/financial-news.html">Financial News</a></li>
+                <li><a href="../education/star-trader-course.html">Курс Star Trader</a></li>
+                <li><a href="../education/financial-news.html">Финансовые новости</a></li>
+                <li><a href="../education/about-us.html">О нас</a></li>
+                <li><a href="../education/account-types.html">Типы счетов</a></li>
+                <li><a href="../education/asset-management.html">Управление активами</a></li>
+                <li><a href="../education/exchange-consulting.html">Биржевой консалтинг</a></li>
+                <li><a href="../education/legal-information.html">Юридическая информация</a></li>
+                <li><a href="../education/our-service.html">Наши Cервисы</a></li>
+                <li><a href="../education/portfolio-investment.html">Портфельное инвестирование</a></li>
               </ul>
             </li>
             <li><a class="nav__chat" href="../trading-room.html">Chat Room</a></li>
@@ -504,24 +511,31 @@
       </a>
       <div class="footer__flex">
         <ul class="footer__list">
-          <li><b>Education</b></li>
-          <li><a href="../education/star-trader-course.html">Star Trader Course</a></li>
-          <li><a href="../education/financial-news.html">Financial News</a></li>
+          <li><b>Обучение</b></li>
+          <li><a href="../education/star-trader-course.html">Курс Star Trader</a></li>
+          <li><a href="../education/financial-news.html">Финансовые новости</a></li>
+          <li><a href="../education/about-us.html">О нас</a></li>
+          <li><a href="../education/account-types.html">Типы счетов</a></li>
+          <li><a href="../education/asset-management.html">Управление активами</a></li>
+          <li><a href="../education/exchange-consulting.html">Биржевой консалтинг</a></li>
+          <li><a href="../education/legal-information.html">Юридическая информация</a></li>
+          <li><a href="../education/our-service.html">Наши Cервисы</a></li>
+          <li><a href="../education/portfolio-investment.html">Портфельное инвестирование</a></li>
         </ul>
         <ul class="footer__list">
           <li><b>Funded Accounts</b></li>
-          <li><a href="basic.html">Basic Program</a></li>
-          <li><a class="footer__active">Advanced Program</a></li>
-          <li><a href="expert.html">Expert Program</a></li>
-          <li><a href="pro.html">Pro Program</a></li>
-          <li><a href="ultimate.html">Ultimate Program</a></li>
-          <li><a href="crypto-master.html">Crypto Master</a></li>
+          <li><a href="basic.html">Базовая</a></li>
+          <li><a class="footer__active">Продвинутая</a></li>
+          <li><a href="expert.html">Эксперт</a></li>
+          <li><a href="pro.html">Профессионал</a></li>
+          <li><a href="ultimate.html">Совершенная</a></li>
+          <li><a href="crypto-master.html">Крипто Мастер</a></li>
         </ul>
         <ul class="footer__list">
           <li><b>About</b></li>
-          <li><a href="../about/terms-and-conditions.html">Terms and Conditions</a></li>
-          <li><a href="../about/privacy-policy.html">Privacy Policy</a></li>
-          <li><a href="../about/contact-us.html">Contact Us</a></li>
+          <li><a href="terms-and-conditions.html">Terms and Conditions</a></li>
+          <li><a href="privacy-policy.html">Privacy Policy</a></li>
+          <li><a href="contact-us.html">Contact Us</a></li>
         </ul>
         <ul class="footer__list">
           <li><b>Trading Chat Room</b></li>
@@ -529,7 +543,6 @@
         </ul>
         <ul class="footer__list">
           <li><b>Contact information</b></li>
-          <!-- <li><a class="footer__phone" href="tel:+442038290032">+442038290032</a></li> -->
           <li><a class="footer__email" href="mailto:info@investix.com">info@investix.com</a></li>
           <li><a class="footer__home" href="https://www.investix.com">www.investix.com</a></li>
         </ul>
