--- a/investix/ru/education/about-us.html
+++ b/investix/ru/education/about-us.html
@@ -30,22 +30,22 @@
         <nav class="nav">
           <ul class="nav__list">
             <li>
-              <a href="account-programs/account.html">Account Programs</a>
+              <a href="../account-programs/account.html">Обучающие программы</a>
               <ul class="nav__sublist">
-                <li><a href="account-programs/basic.html">Basic Program</a></li>
-                <li><a href="account-programs/advanced.html">Advanced Program</a></li>
-                <li><a href="account-programs/expert.html">Expert Program</a></li>
-                <li><a href="account-programs/pro.html">Pro Program</a></li>
-                <li><a href="account-programs/ultimate.html">Ultimate Program</a></li>
-                <li><a href="account-programs/crypto-master.html">Crypto Master</a></li>
+                <li><a href="../account-programs/basic.html">Базовая</a></li>
+                <li><a href="../account-programs/advanced.html">Продвинутая</a></li>
+                <li><a href="../account-programs/expert.html">Эксперт</a></li>
+                <li><a href="../account-programs/pro.html">Профессионал</a></li>
+                <li><a href="../account-programs/ultimate.html">Совершенная</a></li>
+                <li><a href="../account-programs/crypto-master.html">Крипто Мастер</a></li>
               </ul>
             </li>
             <li>
-              <a href="#">Education</a>
+              <a href="#">Обучение</a>
               <ul class="nav__sublist">
-                <li><a href="star-trader-course.html">Star Trader Course</a></li>
-                <li><a href="financial-news.html">Financial News</a></li>
-                <li><a href="about-us.html">О нас</a></li>
+                <li><a href="star-trader-course.html">Курс Star Trader</a></li>
+                <li><a href="financial-news.html">Финансовые новости</a></li>
+                <li><a class="nav__active">О нас</a></li>
                 <li><a href="account-types.html">Типы счетов</a></li>
                 <li><a href="asset-management.html">Управление активами</a></li>
                 <li><a href="exchange-consulting.html">Биржевой консалтинг</a></li>
@@ -54,7 +54,7 @@
                 <li><a href="portfolio-investment.html">Портфельное инвестирование</a></li>
               </ul>
             </li>
-            <li><a class="nav__chat" href="trading-room.html">Chat Room</a></li>
+            <li><a class="nav__chat" href="../trading-room.html">Chat Room</a></li>
             <li>
               <div id="google_translate_element"></div>
               <script type="text/javascript">
@@ -98,32 +98,32 @@
         <p class="text__small">Мы делаем деньги на финансовых рынках, повышаем свой уровень и непрерывно совершенствуемся и растем. Нам повезло : мы молоды, уже достаточно опытны, амбициозны и любим свое дело, поэтому стремимся делать его еще совершеннее и эффективней. Мы собираем эти знания и опыт уже больше 8 лет, естественно путем множества проб и ошибок, взлетов и, конечно, падений. Сегодня, чтобы расти и развиваться еще быстрее мы готовы этим опытом делиться, и расширять свой бизнес путем обучения, доверительного управления и увеличения команды грамотных, и желающих расти и развиваться дальше трейдеров.</p>
         <div class="text__flex">
           <div class="text__human">
-            <img src="../img/human1.jpg" alt="Дмитрий Смирнов">
+            <img src="../../img/human1.jpg" alt="Дмитрий Смирнов">
             <b>Дмитрий Смирнов</b>
             <p>Старший менеджер</p>
           </div>
           <div class="text__human">
-            <img src="../img/human2.jpg" alt="Карина Ларина">
+            <img src="../../img/human2.jpg" alt="Карина Ларина">
             <b>Карина Ларина</b>
             <p>Старший менеджер</p>
           </div>
           <div class="text__human">
-            <img src="../img/human3.jpg" alt="Андрей Степанов">
+            <img src="../../img/human3.jpg" alt="Андрей Степанов">
             <b>Андрей Степанов</b>
             <p>Ведущий аналитик</p>
           </div>
           <div class="text__human">
-            <img src="../img/human4.jpg" alt="Арина Яковлева">
+            <img src="../../img/human4.jpg" alt="Арина Яковлева">
             <b>Арина Яковлева</b>
             <p>Трейдер</p>
           </div>
           <div class="text__human">
-            <img src="../img/human5.jpg" alt="Михаил Городецкий">
+            <img src="../../img/human5.jpg" alt="Михаил Городецкий">
             <b>Михаил Городецкий</b>
             <p>Финансовый аналитик</p>
           </div>
           <div class="text__human">
-            <img src="../img/human6.jpg" alt="Виктор Астахов">
+            <img src="../../img/human6.jpg" alt="Виктор Астахов">
             <b>Виктор Астахов</b>
             <p>Главный трейдер</p>
           </div>
@@ -147,17 +147,15 @@
   </section>
   <footer class="footer">
     <div class="container">
-      <a href="index.html">
-        <img class="footer__logo" src="../img/logo-white.svg" alt="Investix">
+      <a href="../index.html">
+        <img class="footer__logo" src="../../img/logo-white.svg" alt="Investix">
       </a>      
       <div class="footer__flex">
         <ul class="footer__list">
-          <li><b>Education</b></li>
-          <li><a href="star-trader-course.html">Star Trader Course</a></li>
-          <li><a href="financial-news.html">Financial News</a></li>
-          <li><a href="star-trader-course.html">Star Trader Course</a></li>
-          <li><a href="financial-news.html">Financial News</a></li>
-          <li><a href="about-us.html">О нас</a></li>
+          <li><b>Обучение</b></li>
+          <li><a href="star-trader-course.html">Курс Star Trader</a></li>
+          <li><a href="financial-news.html">Финансовые новости</a></li>
+          <li><a class="nav__active">О нас</a></li>
           <li><a href="account-types.html">Типы счетов</a></li>
           <li><a href="asset-management.html">Управление активами</a></li>
           <li><a href="exchange-consulting.html">Биржевой консалтинг</a></li>
@@ -167,18 +165,18 @@
         </ul>
         <ul class="footer__list">
           <li><b>Funded Accounts</b></li>
-          <li><a href="../account-programs/basic.html">Basic Program</a></li>
-          <li><a href="../account-programs/advanced.html">Advanced Program</a></li>
-          <li><a href="../account-programs/expert.html">Expert Program</a></li>
-          <li><a href="../account-programs/pro.html">Pro Program</a></li>
-          <li><a href="../account-programs/ultimate.html">Ultimate Program</a></li>
-          <li><a href="../account-programs/crypto-master.html">Crypto Master</a></li>
+          <li><a href="../account-programs/basic.html">Базовая</a></li>
+          <li><a href="../account-programs/advanced.html">Продвинутая</a></li>
+          <li><a href="../account-programs/expert.html">Эксперт</a></li>
+          <li><a href="../account-programs/pro.html">Профессионал</a></li>
+          <li><a href="../account-programs/ultimate.html">Совершенная</a></li>
+          <li><a href="../account-programs/crypto-master.html">Крипто Мастер</a></li>
         </ul>
         <ul class="footer__list">
           <li><b>About</b></li>
           <li><a href="../about/terms-and-conditions.html">Terms and Conditions</a></li>
           <li><a href="../about/privacy-policy.html">Privacy Policy</a></li>
-          <li><a href="../contact-us.html">Contact Us</a></li>
+          <li><a href="../about/contact-us.html">Contact Us</a></li>
         </ul>
         <ul class="footer__list">
           <li><b>Trading Chat Room</b></li>
@@ -205,8 +203,8 @@
       </div>
     </div>
   </footer>
-  <script src="../js/jquery.min.js"></script>
-  <script src="../js/jquery-plugins.js"></script>
-  <script src="../js/main.min.js" async></script>
+  <script src="../../js/jquery.min.js"></script>
+  <script src="../../js/jquery-plugins.js"></script>
+  <script src="../../js/main.min.js" async></script>
 </body>
 </html>
