--- a/investix/ru/index.html
+++ b/investix/ru/index.html
@@ -31,18 +31,18 @@
         <nav class="nav">
           <ul class="nav__list">
             <li>
-              <a href="account-programs/account.html">Account Programs</a>
+              <a href="account-programs/account.html">Обучающие программы</a>
               <ul class="nav__sublist">
-                <li><a href="account-programs/basic.html">Basic Program</a></li>
-                <li><a href="account-programs/advanced.html">Advanced Program</a></li>
-                <li><a href="account-programs/expert.html">Expert Program</a></li>
-                <li><a href="account-programs/pro.html">Pro Program</a></li>
-                <li><a href="account-programs/ultimate.html">Ultimate Program</a></li>
-                <li><a href="account-programs/crypto-master.html">Crypto Master</a></li>
+                <li><a href="account-programs/basic.html">Базовая</a></li>
+                <li><a href="account-programs/advanced.html">Продвинутая</a></li>
+                <li><a href="account-programs/expert.html">Эксперт</a></li>
+                <li><a href="account-programs/pro.html">Профессионал</a></li>
+                <li><a href="account-programs/ultimate.html">Совершенная</a></li>
+                <li><a href="account-programs/crypto-master.html">Крипто Мастер</a></li>
               </ul>
             </li>
             <li>
-              <a href="#">Education</a>
+              <a href="#">Обучение</a>
               <ul class="nav__sublist">
                 <li><a href="education/star-trader-course.html">Star Trader Course</a></li>
                 <li><a href="education/financial-news.html">Financial News</a></li>
@@ -480,9 +480,9 @@
       <img class="footer__logo" src="../img/logo-white.svg" alt="Investix">
       <div class="footer__flex">
         <ul class="footer__list">
-          <li><b>Education</b></li>
-          <li><a href="education/star-trader-course.html">Star Trader Course</a></li>
-          <li><a href="education/financial-news.html">Financial News</a></li>
+          <li><b>Обучение</b></li>
+          <li><a href="education/star-trader-course.html">Курс Star Trader</a></li>
+          <li><a href="education/financial-news.html">Финансовые новости</a></li>
           <li><a href="education/about-us.html">О нас</a></li>
           <li><a href="education/account-types.html">Типы счетов</a></li>
           <li><a href="education/asset-management.html">Управление активами</a></li>
