--- a/investix/ru/about/terms-and-conditions.html
+++ b/investix/ru/about/terms-and-conditions.html
@@ -4,18 +4,18 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <title>Terms and Conditions - Investix</title>
-  <link rel="stylesheet" href="../css/style.min.css">
+  <link rel="stylesheet" href="../../css/style.min.css">
   <!-- Favicon -->
-  <link rel="icon" type="image/svg+xml" href="../img/favicon/favicon.svg">
-  <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="194x194" href="../img/favicon/favicon-194x194.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="../img/favicon/android-chrome-192x192.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon/favicon-16x16.png">
-  <link rel="mask-icon" href="../img/favicon/safari-pinned-tab.svg" color="#cd2122">
-  <link rel="manifest" href="../site.webmanifest">
-  <meta name="msapplication-config" content="../browserconfig.xml">
-  <meta name="msapplication-TileImage" content="../img/favicon/mstile-144x144.png">
+  <link rel="icon" type="image/svg+xml" href="../../img/favicon/favicon.svg">
+  <link rel="apple-touch-icon" sizes="180x180" href="../../apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="../../img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="194x194" href="../../img/favicon/favicon-194x194.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="../../img/favicon/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../../img/favicon/favicon-16x16.png">
+  <link rel="mask-icon" href="../../img/favicon/safari-pinned-tab.svg" color="#cd2122">
+  <link rel="manifest" href="../../site.webmanifest">
+  <meta name="msapplication-config" content="../../browserconfig.xml">
+  <meta name="msapplication-TileImage" content="../../img/favicon/mstile-144x144.png">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="theme-color" content="#ffffff">
 </head>
@@ -30,21 +30,28 @@
         <nav class="nav">
           <ul class="nav__list">
             <li>
-              <a href="../account-programs/account.html">Account Programs</a>
+              <a href="../account-programs/account.html">Обучающие программы</a>
               <ul class="nav__sublist">
-                <li><a href="../account-programs/basic.html">Basic Program</a></li>
-                <li><a href="../account-programs/advanced.html">Advanced Program</a></li>
-                <li><a href="../account-programs/expert.html">Expert Program</a></li>
-                <li><a href="../account-programs/pro.html">Pro Program</a></li>
-                <li><a href="../account-programs/ultimate.html">Ultimate Program</a></li>
-                <li><a href="../account-programs/crypto-master.html">Crypto Master</a></li>
+                <li><a href="../account-programs/basic.html">Базовая</a></li>
+                <li><a href="../account-programs/advanced.html">Продвинутая</a></li>
+                <li><a href="../account-programs/expert.html">Эксперт</a></li>
+                <li><a href="../account-programs/pro.html">Профессионал</a></li>
+                <li><a href="../account-programs/ultimate.html">Совершенная</a></li>
+                <li><a href="../account-programs/crypto-master.html">Крипто Мастер</a></li>
               </ul>
             </li>
             <li>
-              <a href="#">Education</a>
+              <a href="#">Обучение</a>
               <ul class="nav__sublist">
-                <li><a href="../education/star-trader-course.html">Star Trader Course</a></li>
-                <li><a href="../education/financial-news.html">Financial News</a></li>
+                <li><a href="star-trader-course.html">Курс Star Trader</a></li>
+                <li><a href="financial-news.html">Финансовые новости</a></li>
+                <li><a href="about-us.html">О нас</a></li>
+                <li><a href="account-types.html">Типы счетов</a></li>
+                <li><a href="asset-management.html">Управление активами</a></li>
+                <li><a href="exchange-consulting.html">Биржевой консалтинг</a></li>
+                <li><a href="legal-information.html">Юридическая информация</a></li>
+                <li><a href="our-service.html">Наши Cервисы</a></li>
+                <li><a href="portfolio-investment.html">Портфельное инвестирование</a></li>
               </ul>
             </li>
             <li><a class="nav__chat" href="../trading-room.html">Chat Room</a></li>
@@ -200,22 +207,29 @@
       </a>
       <div class="footer__flex">
         <ul class="footer__list">
-          <li><b>Education</b></li>
-          <li><a href="../education/star-trader-course.html">Star Trader Course</a></li>
-          <li><a href="../education/financial-news.html">Financial News</a></li>
+          <li><b>Обучение</b></li>
+          <li><a href="star-trader-course.html">Курс Star Trader</a></li>
+          <li><a href="financial-news.html">Финансовые новости</a></li>
+          <li><a href="about-us.html">О нас</a></li>
+          <li><a href="account-types.html">Типы счетов</a></li>
+          <li><a href="asset-management.html">Управление активами</a></li>
+          <li><a href="exchange-consulting.html">Биржевой консалтинг</a></li>
+          <li><a href="legal-information.html">Юридическая информация</a></li>
+          <li><a href="our-service.html">Наши Cервисы</a></li>
+          <li><a href="portfolio-investment.html">Портфельное инвестирование</a></li>
         </ul>
         <ul class="footer__list">
           <li><b>Funded Accounts</b></li>
-          <li><a href="../account-programs/basic.html">Basic Program</a></li>
-          <li><a href="../account-programs/advanced.html">Advanced Program</a></li>
-          <li><a href="../account-programs/expert.html">Expert Program</a></li>
-          <li><a href="../account-programs/pro.html">Pro Program</a></li>
-          <li><a href="../account-programs/ultimate.html">Ultimate Program</a></li>
-          <li><a href="../account-programs/crypto-master.html">Crypto Master</a></li>
+          <li><a href="../account-programs/basic.html">Базовая</a></li>
+          <li><a href="../account-programs/advanced.html">Продвинутая</a></li>
+          <li><a href="../account-programs/expert.html">Эксперт</a></li>
+          <li><a href="../account-programs/pro.html">Профессионал</a></li>
+          <li><a href="../account-programs/ultimate.html">Совершенная</a></li>
+          <li><a href="../account-programs/crypto-master.html">Крипто Мастер</a></li>
         </ul>
         <ul class="footer__list">
           <li><b>About</b></li>
-          <li><a class="footer__active">Terms and Conditions</a></li>
+          <li><a class="nav__active">Terms and Conditions</a></li>
           <li><a href="privacy-policy.html">Privacy Policy</a></li>
           <li><a href="contact-us.html">Contact Us</a></li>
         </ul>
@@ -244,8 +258,8 @@
       </div>
     </div>
   </footer>
-  <script src="../js/jquery.min.js"></script>
-  <script src="../js/jquery-plugins.js"></script>
-  <script src="../js/main.min.js" async></script>
+  <script src="../../js/jquery.min.js"></script>
+  <script src="../../js/jquery-plugins.js"></script>
+  <script src="../../js/main.min.js" async></script>
 </body>
 </html>
