--- a/investix/ru/education/account-types.html
+++ b/investix/ru/education/account-types.html
@@ -6,16 +6,16 @@
   <title>Типы счетов - Investix</title>
   <link rel="stylesheet" href="../../css/style.min.css">
   <!-- Favicon -->
-  <link rel="icon" type="image/svg+xml" href="../img/favicon/favicon.svg">
-  <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="194x194" href="../img/favicon/favicon-194x194.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="../img/favicon/android-chrome-192x192.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon/favicon-16x16.png">
-  <link rel="mask-icon" href="../img/favicon/safari-pinned-tab.svg" color="#cd2122">
-  <link rel="manifest" href="../site.webmanifest">
-  <meta name="msapplication-config" content="../browserconfig.xml">
-  <meta name="msapplication-TileImage" content="../img/favicon/mstile-144x144.png">
+  <link rel="icon" type="image/svg+xml" href="../../img/favicon/favicon.svg">
+  <link rel="apple-touch-icon" sizes="180x180" href="../../apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="../../img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="194x194" href="../../img/favicon/favicon-194x194.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="../../img/favicon/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../../img/favicon/favicon-16x16.png">
+  <link rel="mask-icon" href="../../img/favicon/safari-pinned-tab.svg" color="#cd2122">
+  <link rel="manifest" href="../../site.webmanifest">
+  <meta name="msapplication-config" content="../../browserconfig.xml">
+  <meta name="msapplication-TileImage" content="../../img/favicon/mstile-144x144.png">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="theme-color" content="#ffffff">
 </head>
@@ -24,29 +24,29 @@
     <div class="container">
       <div class="header__flex">
         <a class="header__link" href="../index.html">
-          <img class="header__logo" src="../img/logo.svg" alt="Investix">
+          <img class="header__logo" src="../../img/logo.svg" alt="Investix">
         </a>
         <button class="header__toggle  header__toggle--inactive" type="button"></button>
         <nav class="nav">
           <ul class="nav__list">
             <li>
-              <a href="account-programs/account.html">Account Programs</a>
+              <a href="../account-programs/account.html">Обучающие программы</a>
               <ul class="nav__sublist">
-                <li><a href="account-programs/basic.html">Basic Program</a></li>
-                <li><a href="account-programs/advanced.html">Advanced Program</a></li>
-                <li><a href="account-programs/expert.html">Expert Program</a></li>
-                <li><a href="account-programs/pro.html">Pro Program</a></li>
-                <li><a href="account-programs/ultimate.html">Ultimate Program</a></li>
-                <li><a href="account-programs/crypto-master.html">Crypto Master</a></li>
+                <li><a href="../account-programs/basic.html">Базовая</a></li>
+                <li><a href="../account-programs/advanced.html">Продвинутая</a></li>
+                <li><a href="../account-programs/expert.html">Эксперт</a></li>
+                <li><a href="../account-programs/pro.html">Профессионал</a></li>
+                <li><a href="../account-programs/ultimate.html">Совершенная</a></li>
+                <li><a href="../account-programs/crypto-master.html">Крипто Мастер</a></li>
               </ul>
             </li>
             <li>
-              <a href="#">Education</a>
+              <a href="#">Обучение</a>
               <ul class="nav__sublist">
-                <li><a href="star-trader-course.html">Star Trader Course</a></li>
-                <li><a href="financial-news.html">Financial News</a></li>
+                <li><a href="star-trader-course.html">Курс Star Trader</a></li>
+                <li><a href="financial-news.html">Финансовые новости</a></li>
                 <li><a href="about-us.html">О нас</a></li>
-                <li><a href="account-types.html">Типы счетов</a></li>
+                <li><a class="nav__active">Типы счетов</a></li>
                 <li><a href="asset-management.html">Управление активами</a></li>
                 <li><a href="exchange-consulting.html">Биржевой консалтинг</a></li>
                 <li><a href="legal-information.html">Юридическая информация</a></li>
@@ -54,7 +54,7 @@
                 <li><a href="portfolio-investment.html">Портфельное инвестирование</a></li>
               </ul>
             </li>
-            <li><a class="nav__chat" href="trading-room.html">Chat Room</a></li>
+            <li><a class="nav__chat" href="../trading-room.html">Chat Room</a></li>
             <li>
               <div id="google_translate_element"></div>
               <script type="text/javascript">
@@ -158,109 +158,109 @@
           <tr class="table__row">
             <td>Поддержка в режиме 24/6</td>
             <td class="table__check">
-              <img src="../img/table-check.svg" alt="Check">
+              <img src="../../img/table-check.svg" alt="Check">
             </td>
             <td class="table__check">
-              <img src="../img/table-check.svg" alt="Check">
+              <img src="../../img/table-check.svg" alt="Check">
             </td>
             <td class="table__check">
-              <img src="../img/table-check.svg" alt="Check">
+              <img src="../../img/table-check.svg" alt="Check">
             </td>
             <td class="table__check">
-              <img src="../img/table-check.svg" alt="Check">
+              <img src="../../img/table-check.svg" alt="Check">
             </td>
             <td class="table__check">
-              <img src="../img/table-check.svg" alt="Check">
+              <img src="../../img/table-check.svg" alt="Check">
             </td>
           </tr>
           <tr class="table__row">
             <td>Учебный центр</td>
             <td class="table__check">
-              <img src="../img/table-check.svg" alt="Check">
+              <img src="../../img/table-check.svg" alt="Check">
             </td>
             <td class="table__check">
-              <img src="../img/table-check.svg" alt="Check">
+              <img src="../../img/table-check.svg" alt="Check">
             </td>
             <td class="table__check">
-              <img src="../img/table-check.svg" alt="Check">
+              <img src="../../img/table-check.svg" alt="Check">
             </td>
             <td class="table__check">
-              <img src="../img/table-check.svg" alt="Check">
+              <img src="../../img/table-check.svg" alt="Check">
             </td>
             <td class="table__check">
-              <img src="../img/table-check.svg" alt="Check">
+              <img src="../../img/table-check.svg" alt="Check">
             </td>
           </tr>
           <tr class="table__row">
             <td>Ежедневный обзор рынков</td>
             <td class="table__check">
-              <img src="../img/table-check.svg" alt="Check">
+              <img src="../../img/table-check.svg" alt="Check">
             </td>
             <td class="table__check">
-              <img src="../img/table-check.svg" alt="Check">
+              <img src="../../img/table-check.svg" alt="Check">
             </td>
             <td class="table__check">
-              <img src="../img/table-check.svg" alt="Check">
+              <img src="../../img/table-check.svg" alt="Check">
             </td>
             <td class="table__check">
-              <img src="../img/table-check.svg" alt="Check">
+              <img src="../../img/table-check.svg" alt="Check">
             </td>
             <td class="table__check">
-              <img src="../img/table-check.svg" alt="Check">
+              <img src="../../img/table-check.svg" alt="Check">
             </td>
           </tr>
           <tr class="table__row">
             <td>Вебинары с профессионалами</td>
             <td class="table__check">
-              <img src="../img/table-check.svg" alt="Check">
+              <img src="../../img/table-check.svg" alt="Check">
             </td>
             <td class="table__check">
-              <img src="../img/table-check.svg" alt="Check">
+              <img src="../../img/table-check.svg" alt="Check">
             </td>
             <td class="table__check">
-              <img src="../img/table-check.svg" alt="Check">
+              <img src="../../img/table-check.svg" alt="Check">
             </td>
             <td class="table__check">
-              <img src="../img/table-check.svg" alt="Check">
+              <img src="../../img/table-check.svg" alt="Check">
             </td>
             <td class="table__check">
-              <img src="../img/table-check.svg" alt="Check">
+              <img src="../../img/table-check.svg" alt="Check">
             </td>
           </tr>
           <tr class="table__row">
             <td>Оповещения о ценах</td>
             <td class="table__check">
-              <img src="../img/table-check.svg" alt="Check">
+              <img src="../../img/table-check.svg" alt="Check">
             </td>
             <td class="table__check">
-              <img src="../img/table-check.svg" alt="Check">
+              <img src="../../img/table-check.svg" alt="Check">
             </td>
             <td class="table__check">
-              <img src="../img/table-check.svg" alt="Check">
+              <img src="../../img/table-check.svg" alt="Check">
             </td>
             <td class="table__check">
-              <img src="../img/table-check.svg" alt="Check">
+              <img src="../../img/table-check.svg" alt="Check">
             </td>
             <td class="table__check">
-              <img src="../img/table-check.svg" alt="Check">
+              <img src="../../img/table-check.svg" alt="Check">
             </td>
           </tr>
           <tr class="table__row">
             <td>Daily Analysis Video</td>
             <td class="table__check">
-              <img src="../img/table-check.svg" alt="Check">
+              <img src="../../img/table-check.svg" alt="Check">
             </td>
             <td class="table__check">
-              <img src="../img/table-check.svg" alt="Check">
+              <img src="../../img/table-check.svg" alt="Check">
             </td>
             <td class="table__check">
-              <img src="../img/table-check.svg" alt="Check">
+              <img src="../../img/table-check.svg" alt="Check">
             </td>
             <td class="table__check">
-              <img src="../img/table-check.svg" alt="Check">
+              <img src="../../img/table-check.svg" alt="Check">
             </td>
             <td class="table__check">
-              <img src="../img/table-check.svg" alt="Check">
+              <img src="../../img/table-check.svg" alt="Check">
             </td>
           </tr>
           <tr class="table__row">
@@ -285,10 +285,10 @@
             <td>&nbsp</td>
             <td>&nbsp</td>
             <td class="table__check">
-              <img src="../img/table-check.svg" alt="Check">
+              <img src="../../img/table-check.svg" alt="Check">
             </td>
             <td class="table__check">
-              <img src="../img/table-check.svg" alt="Check">
+              <img src="../../img/table-check.svg" alt="Check">
             </td>
           </tr>
           <tr class="table__row">
@@ -298,7 +298,7 @@
             <td>&nbsp</td>
             <td>&nbsp</td>
             <td class="table__check">
-              <img src="../img/table-check.svg" alt="Check">
+              <img src="../../img/table-check.svg" alt="Check">
             </td>
           </tr>
           <tr class="table__row">
@@ -308,7 +308,7 @@
             <td>&nbsp</td>
             <td>&nbsp</td>
             <td class="table__check">
-              <img src="../img/table-check.svg" alt="Check">
+              <img src="../../img/table-check.svg" alt="Check">
             </td>
           </tr>
           <tr>
@@ -352,29 +352,36 @@
   </section>
   <footer class="footer">
     <div class="container">
-      <a href="index.html">
-        <img class="footer__logo" src="../img/logo-white.svg" alt="Investix">
+      <a href="../index.html">
+        <img class="footer__logo" src="../../img/logo-white.svg" alt="Investix">
       </a>      
       <div class="footer__flex">
         <ul class="footer__list">
-          <li><b>Education</b></li>
-          <li><a href="../education/star-trader-course.html">Star Trader Course</a></li>
-          <li><a href="../education/financial-news.html">Financial News</a></li>
+          <li><b>Обучение</b></li>
+          <li><a href="star-trader-course.html">Курс Star Trader</a></li>
+          <li><a href="financial-news.html">Финансовые новости</a></li>
+          <li><a href="about-us.html">О нас</a></li>
+          <li><a class="nav__active">Типы счетов</a></li>
+          <li><a href="asset-management.html">Управление активами</a></li>
+          <li><a href="exchange-consulting.html">Биржевой консалтинг</a></li>
+          <li><a href="legal-information.html">Юридическая информация</a></li>
+          <li><a href="our-service.html">Наши Cервисы</a></li>
+          <li><a href="portfolio-investment.html">Портфельное инвестирование</a></li>
         </ul>
         <ul class="footer__list">
           <li><b>Funded Accounts</b></li>
-          <li><a href="../account-programs/basic.html">Basic Program</a></li>
-          <li><a href="../account-programs/advanced.html">Advanced Program</a></li>
-          <li><a href="../account-programs/expert.html">Expert Program</a></li>
-          <li><a href="../account-programs/pro.html">Pro Program</a></li>
-          <li><a href="../account-programs/ultimate.html">Ultimate Program</a></li>
-          <li><a href="../account-programs/crypto-master.html">Crypto Master</a></li>
+          <li><a href="../account-programs/basic.html">Базовая</a></li>
+          <li><a href="../account-programs/advanced.html">Продвинутая</a></li>
+          <li><a href="../account-programs/expert.html">Эксперт</a></li>
+          <li><a href="../account-programs/pro.html">Профессионал</a></li>
+          <li><a href="../account-programs/ultimate.html">Совершенная</a></li>
+          <li><a href="../account-programs/crypto-master.html">Крипто Мастер</a></li>
         </ul>
         <ul class="footer__list">
           <li><b>About</b></li>
           <li><a href="../about/terms-and-conditions.html">Terms and Conditions</a></li>
           <li><a href="../about/privacy-policy.html">Privacy Policy</a></li>
-          <li><a href="../contact-us.html">Contact Us</a></li>
+          <li><a href="../about/contact-us.html">Contact Us</a></li>
         </ul>
         <ul class="footer__list">
           <li><b>Trading Chat Room</b></li>
@@ -401,8 +408,8 @@
       </div>
     </div>
   </footer>
-  <script src="../js/jquery.min.js"></script>
-  <script src="../js/jquery-plugins.js"></script>
-  <script src="../js/main.min.js" async></script>
+  <script src="../../js/jquery.min.js"></script>
+  <script src="../../js/jquery-plugins.js"></script>
+  <script src="../../js/main.min.js" async></script>
 </body>
 </html>
