--- a/investix/ru/education/star-trader-course.html
+++ b/investix/ru/education/star-trader-course.html
@@ -30,21 +30,21 @@
         <nav class="nav">
           <ul class="nav__list">
             <li>
-              <a href="../account-programs/account.html">Account Programs</a>
+              <a href="../account-programs/account.html">Обучающие программы</a>
               <ul class="nav__sublist">
-                <li><a href="../account-programs/basic.html">Basic Program</a></li>
-                <li><a href="../account-programs/advanced.html">Advanced Program</a></li>
-                <li><a href="../account-programs/expert.html">Expert Program</a></li>
-                <li><a href="../account-programs/pro.html">Pro Program</a></li>
-                <li><a href="../account-programs/ultimate.html">Ultimate Program</a></li>
-                <li><a href="../account-programs/crypto-master.html">Crypto Master</a></li>
+                <li><a href="../account-programs/basic.html">Базовая</a></li>
+                <li><a href="../account-programs/advanced.html">Продвинутая</a></li>
+                <li><a href="../account-programs/expert.html">Эксперт</a></li>
+                <li><a href="../account-programs/pro.html">Профессионал</a></li>
+                <li><a href="../account-programs/ultimate.html">Совершенная</a></li>
+                <li><a href="../account-programs/crypto-master.html">Крипто Мастер</a></li>
               </ul>
             </li>
             <li>
-              <a href="#">Education</a>
+              <a href="#">Обучение</a>
               <ul class="nav__sublist">
-                <li><a href="star-trader-course.html">Star Trader Course</a></li>
-                <li><a href="financial-news.html">Financial News</a></li>
+                <li><a class="nav__active">Курс Star Trader</a></li>
+                <li><a href="financial-news.html">Финансовые новости</a></li>
                 <li><a href="about-us.html">О нас</a></li>
                 <li><a href="account-types.html">Типы счетов</a></li>
                 <li><a href="asset-management.html">Управление активами</a></li>
@@ -532,18 +532,25 @@
       </a>
       <div class="footer__flex">
         <ul class="footer__list">
-          <li><b>Education</b></li>
-          <li><a class="footer__active">Star Trader Course</a></li>
-          <li><a href="financial-news.html">Financial News</a></li>
+          <li><b>Обучение</b></li>
+          <li><a class="nav__active">Курс Star Trader</a></li>
+          <li><a href="financial-news.html">Финансовые новости</a></li>
+          <li><a href="about-us.html">О нас</a></li>
+          <li><a href="account-types.html">Типы счетов</a></li>
+          <li><a href="asset-management.html">Управление активами</a></li>
+          <li><a href="exchange-consulting.html">Биржевой консалтинг</a></li>
+          <li><a href="legal-information.html">Юридическая информация</a></li>
+          <li><a href="our-service.html">Наши Cервисы</a></li>
+          <li><a href="portfolio-investment.html">Портфельное инвестирование</a></li>
         </ul>
         <ul class="footer__list">
           <li><b>Funded Accounts</b></li>
-          <li><a href="../account-programs/basic.html">Basic Program</a></li>
-          <li><a href="../account-programs/advanced.html">Advanced Program</a></li>
-          <li><a href="../account-programs/expert.html">Expert Program</a></li>
-          <li><a href="../account-programs/pro.html">Pro Program</a></li>
-          <li><a href="../account-programs/ultimate.html">Ultimate Program</a></li>
-          <li><a href="../account-programs/crypto-master.html">Crypto Master</a></li>
+          <li><a href="../account-programs/basic.html">Базовая</a></li>
+          <li><a href="../account-programs/advanced.html">Продвинутая</a></li>
+          <li><a href="../account-programs/expert.html">Эксперт</a></li>
+          <li><a href="../account-programs/pro.html">Профессионал</a></li>
+          <li><a href="../account-programs/ultimate.html">Совершенная</a></li>
+          <li><a href="../account-programs/crypto-master.html">Крипто Мастер</a></li>
         </ul>
         <ul class="footer__list">
           <li><b>About</b></li>
